--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,21 @@
  *= require_tree .
  *= require_self
  */
+
+.center {
+  width: 50%;
+  padding: 10px;
+}
+ .list {
+  list-style: none;
+  display: flex;
+ }
+
+ li {
+  font-size: 40px;
+  margin: 15px;
+  background-color: rgb(0, 157, 255);
+  padding: 20px;
+  color: white;
+  font-weight: bold;
+ }
